[metadata]
name = gabbi-tempest
author = Chris Dent
author-email = cdent@anticdent.org
summary = Run Gabbi Tests as Tempest Plugin
description-file = README.rst
license = Apache-2
home-page = https://github.com/cdent/gabbi-tempest
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Testing

[files]
packages =
    gabbi_tempest

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
tempest.test_plugins =
    gabbi = gabbi_tempest.plugin:GabbiTempestPlugin

[bdist_wheel]
universal=1
